# DEMO.

./: .gitignore  AGENTS.md  BACKEND_RULES.md  Dockerfile  FRONTEND_RULES.md  GUIA_SPA_FASTAPI.md  ObservacionSeguridad.md  SECURITY.md  skills-lock.json
backend/: .env.example  Dockerfile  check_admin.py  check_cdn.py  check_form.py  pyproject.toml  test_admin_login.py  test_auth.py  test_final.py  test_final2.py  test_login2.py  test_login3.py  test_owasp.py  test_rate.py  test_rate2.py  test_rate3.py
backend/src/app/: admin.py  config.py  database.py  main.py
backend/src/app/core/: security.py
backend/src/app/features/auth/: __init__.py  api.py  schemas.py  services.py
backend/src/app/features/cart/: __init__.py  api.py  models.py  repository.py  schemas.py  services.py
backend/src/app/features/orders/: __init__.py  api.py  models.py  repository.py  schemas.py  services.py
backend/src/app/features/products/: __init__.py  api.py  models.py  repository.py  schemas.py  services.py
backend/src/app/features/users/: __init__.py  api.py  models.py  repository.py  schemas.py
backend/src/app/models/: __init__.py
backend/src/app/templates/: base.html
backend/static/: index.html
backend/static/assets/: index-BAAq3l4X.js  index-C8HgywVV.css
data/: productos-sheets.csv  productos-sheets.json
design-system/market/: MASTER.md
mi-tienda-frontend/: APRENDIZAJE.md  index.html  package-lock.json  package.json  tsconfig.app.json
mi-tienda-frontend/src/: App.tsx  index.css
mi-tienda-frontend/src/components/: ErrorBoundary.tsx
(+25 files in other folders)
